--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   , "dependencies": {
       "connect": : "1.8.5",
       "mime": ">= 0.0.1",
-      "formidable": "1.0.x",
+      "formidable": "1.0.x"
     }
   , "devDependencies": {
       "should": "*",
