--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   , "keywords": []
   , "author": "Randy McLaughlin <8b629a9884@snkmail.com>"
   , "dependencies": {
-      "connect": "1.8.5",
-      "coffee-script": "1",
-      "mime": ">= 0.0.1",
-      "formidable": "1.0.x"
+        "connect": "1.8.5"
+      , "coffee-script": "1"
+      , "mime": ">= 0.0.1"
     }
   , "devDependencies": {
-      "should": "*",
-      "mocha": "*"
+      "should": "*"
+      , "mocha": "*"
     }
-   , "main": "index"
+  , "main": "index"
   , "engines": { "node": "0.6.x" }
 }
