Use mime-magic for a more thorough examination of a file's type. This does slow down serving of the file, but in a separate process.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "connect": "1.8.5"
       , "coffee-script": "1"
       , "mime": ">= 0.0.1"
+      , "mime-magic": ">= 0.2.5"
     }
   , "devDependencies": {
       "should": "*"
