--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "connect": "1.8.x"
       , "mime": ">= 0.0.1"
       , "coffee-script": "1.2.x"
+      , "underscore": "1.3.x"
     }
   , "devDependencies": {
         "should": "0.5.x"
