--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       , "mime": ">= 0.0.1"
       , "coffee-script": "1.2.x"
       , "underscore": "1.3.x"
+      , "buffertools": "1.0.x"
     }
   , "devDependencies": {
         "should": "0.5.x"
