--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   , "keywords": []
   , "author": "Randy McLaughlin <8b629a9884@snkmail.com>"
   , "dependencies": {
-        "connect": "2.0.x"
-      , "mime": ">= 0.0.1"
-      , "coffee-script": "1.2.x"
+        "connect": "2.3.x"
+      , "mime": "1.2.x"
+      , "coffee-script": "1.3.x"
       , "underscore": "1.3.x"
       , "buffertools": "1.0.x"
     }
