--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
       , "coffee-script": "1.3.x"
       , "underscore": "1.3.x"
       , "buffertools": "1.0.x"
-    }
+      , "send": "0.0.1"
+}
   , "devDependencies": {
         "should": "0.6.x"
       , "mocha": "1.1.x"
