--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "coffee-script": "1.6.x",
     "underscore": "1.4.x",
     "buffertools": "1.1.x",
-    "send": "0.1.0"
+    "send": "0.1.0",
+    "http-accept": "~0.1.1-3"
   },
   "devDependencies": {
     "should": "0.6.x",
