--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "MAny LIttle FIles. A Connect layer where requests are routed to files in a directory whose structure reflects that of the URL. Malifi organizes all files that support a given page, such as code, template, css and supporting javascript together.",
   "keywords": [],
   "author": "Randy McLaughlin <8b629a9884@snkmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/randymized/malifi.git"
+  },
   "dependencies": {
     "connect": "2.7.x",
     "mime": "1.2.x",
